--- a/2 task/src/style/desktop.css
+++ b/2 task/src/style/desktop.css
@@ -1,13 +1,37 @@
 @media screen and (min-width: 1440px) {
 
   @font-face {
-    font-family: Montserrat;
-    src: url(../fonts/Montserrat.ttf);
+    font-family: Montserrat-Light;
+    src: url(../fonts/Montserrat-Light.ttf);
   }
 
   @font-face {
-    font-family: Inter;
-    src: url(../fonts/Inter.ttf);
+    font-family: Montserrat-Regular;
+    src: url(../fonts/Montserrat-Regular.ttf);
+  }
+
+  @font-face {
+    font-family: Inter-Regular;
+    src: url(../fonts/Inter-Regular.ttf);
+  }
+
+  @font-face {
+    font-family: Inter-Medium;
+    src: url(../fonts/Inter-Medium.ttf);
+  }
+
+  @font-face {
+    font-family: Inter-Bold;
+    src: url(../fonts/Inter-Bold.ttf);
+  }
+
+  @font-face {
+    font-family: Inter-Black;
+    src: url(../fonts/Inter-Black.ttf);
+  }
+
+  #red-light, #purple-light-mobile, #yellow-light, #purple-ball-mobile, #red-ball-mobile, #glass, #noise, #mobile-offer-wrap {
+    display: none;
   }
 
   body {
@@ -28,6 +52,47 @@
     background: #833AB4;
     opacity: 0.5;
     filter: blur(13.611vw);
+  }
+
+  #purple-ball {
+    border-radius: 50%;
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    left: 60.278vw;
+    top: -0.139vw;
+
+    background: radial-gradient(64% 64% at 27.25% 26.5%, rgba(236, 208, 255, 0.64) 0%, rgba(161, 93, 207, 0.24) 59.67%, rgba(118, 49, 164, 0.208) 78.59%, rgba(86, 24, 128, 0.232) 100%);
+    box-shadow: 3px 6px 27px -10px rgba(177, 118, 217, 0.25);
+    filter: blur(5px);
+    backdrop-filter: blur(2px);
+  }
+
+  #red-ball {
+    border-radius: 50%;
+    position: absolute;
+    width: 83px;
+    height: 83px;
+    left: 36.042vw;
+    top: 5.764vw;
+
+    background: radial-gradient(64% 64% at 27.25% 26.5%, rgba(255, 208, 208, 0.536) 0%, rgba(212, 93, 93, 0.264) 59.67%, rgba(167, 49, 49, 0.248) 78.59%, rgba(130, 25, 25, 0.248) 100%);
+    box-shadow: 3px 6px 27px -10px rgba(223, 125, 125, 0.25);
+    backdrop-filter: blur(2px);
+  }
+
+  #small-red-ball {
+    border-radius: 50%;
+    position: absolute;
+    width: 28px;
+    height: 28px;
+    left: 59.097vw;
+    top: 36vw;
+
+    background: radial-gradient(64% 64% at 27.25% 26.5%, rgba(255, 208, 208, 0.48) 0%, rgba(212, 93, 93, 0.248) 59.67%, rgba(167, 49, 49, 0.264) 78.59%, rgba(130, 25, 25, 0.232) 100%);
+    box-shadow: 3px 6px 27px -10px rgba(223, 125, 125, 0.25);
+    filter: blur(2.5px);
+    backdrop-filter: blur(2px);
   }
 
   header {
@@ -53,9 +118,8 @@
 
   #welbex p {
     margin: 10px 0 0;
-    font-family: Montserrat, sans-serif;
-    font-style: normal;
-    font-weight: 300;
+
+    font-family: Montserrat-Light, sans-serif;
     font-size: 10px;
     line-height: 12px;
     color: #E4E5EA;
@@ -70,9 +134,8 @@
 
   #menu p {
     margin: 0;
-    font-family: Inter, sans-serif;
-    font-style: normal;
-    font-weight: 500;
+
+    font-family: Inter-Medium, sans-serif;
     font-size: 16px;
     line-height: 19px;
     color: #E4E5EA;
@@ -85,9 +148,8 @@
 
   #phone-header {
     margin: 0;
-    font-family: Inter, sans-serif;
-    font-style: normal;
-    font-weight: 500;
+
+    font-family: Inter-Medium, sans-serif;
     font-size: 16px;
     line-height: 19px;
     text-align: right;
@@ -105,50 +167,205 @@
   }
 
   main {
+    margin-bottom: 124px;
     width: 1140px;
     display: flex;
     justify-content: space-between;
   }
 
-  #left-column {
-    display: flex;
-  }
-
-  #left-column:nth-child(0) {
+  #left-column :nth-child(1) {
     margin: 0;
 
-    font-family: Inter, sans-serif;
-    font-style: normal;
-    font-weight: 400;
+    font-family: Inter-Regular, sans-serif;
     font-size: 48px;
     line-height: 58px;
     color: #E4E5EA;
   }
 
-  #left-column:nth-child(1) {
+  #left-column :nth-child(2) {
     margin: 0;
 
-    font-family: Inter, sans-serif;
-    font-style: normal;
-    font-weight: 900;
+    font-family: Inter-Black, sans-serif;
     font-size: 48px;
     line-height: 58px;
 
     background: linear-gradient(92deg, #FCB045 27.14%, #FF3F78 121.36%), #E4E5EA;
     -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
     background-clip: text;
     -webkit-text-fill-color: transparent;
   }
 
-  #left-column:nth-child(2) {
-    margin: 0;
+  #left-column :nth-child(3) {
+    margin: 30px 0 0 0;
 
-    font-family: Montserrat, sans-serif;
-    font-style: normal;
-    font-weight: 400;
+    font-family: Montserrat-Regular, sans-serif;
     font-size: 18px;
     line-height: 22px;
+    color: #E4E5EA;
+  }
+
+  #right-column {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+  }
+
+  #present-wrap {
+    text-align: end;
+  }
+
+  #present-wrap :first-child,  #present-wrap :last-child {
+    font-family: Inter-Medium, sans-serif;
+    font-size: 18px;
+    line-height: 22px;
+    color: #E4E5EA;
+  }
+
+  #present-wrap :nth-child(2),  #present-wrap :nth-child(3) {
+    font-family: Inter-Bold, sans-serif;
+    font-size: 18px;
+    line-height: 22px;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+
+    background: linear-gradient(90deg, #FCB045 36.99%, #FD1D1D 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+  }
+
+  #offer-wrap {
+    margin: 40px 0 61px 0;
+
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 30px;
+    grid-row-gap: 30px;
+  }
+
+  .offer-header {
+    margin: 0;
+
+    font-family: Inter-Medium, sans-serif;
+    font-size: 18px;
+    line-height: 22px;
+    text-align: right;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+    color: #E4E5EA;
+  }
+
+  .offer-text {
+    margin: 6px 0 0 0;
+
+    font-family: Montserrat-Regular, sans-serif;
+    font-size: 16px;
+    line-height: 20px;
+    text-align: right;
+    color: #E4E5EA;
+  }
+
+  #button {
+    text-decoration: none;
+  }
+
+  #button > div {
+    width: 262px;
+    height: 61px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #4077F3;
+
+    font-family: Inter-Medium, sans-serif;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+    color: #E4E5EA;
+  }
+
+  footer {
+    width: 1140px;
+    display: flex;
+  }
+
+  #footer-about {
+    margin-right: 98px;
+  }
+
+  .footer-header {
+    margin: 0 0 20px 0;
+
+    grid-area: footer-header;
+
+    font-family: Inter-Bold, sans-serif;
+    font-size: 14px;
+    line-height: 17px;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+    color: #656566;
+  }
+
+  .footer-text {
+    margin: 0 0 10px 0;
+
+    font-family: Inter-Regular, sans-serif;
+    font-size: 16px;
+    line-height: 19px;
+    color: #E4E5EA;
+  }
+
+  #footer-menu {
+    margin-right: 163px;
+    display: grid;
+    grid-template-areas:
+      "footer-header footer-header"
+      "fm-left fm-right";
+    grid-template-rows: 37px 1fr;
+  }
+
+  #fm-left {
+    margin-right: 52px;
+    grid-area: fm-left;
+  }
+
+  #fm-right {
+    grid-area: fm-right;
+  }
+
+  #footer-contacts {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+  }
+
+  #footer-socials {
+    margin: 11px 0 19px 0;
+    display: flex;
+    column-gap: 10px;
+  }
+
+  #footer-socials img {
+    width: 20px;
+    height: 20px;
+  }
+
+  #all-rights {
+    margin: 70px 0 0 0;
+
+    font-family: Montserrat-Regular, sans-serif;
+    font-size: 12px;
+    line-height: 15px;
+    color: #E4E5EA;
+  }
+
+  #confidentiality {
+    margin: 0 0 20px 0;
+
+    font-family: Montserrat-Regular, sans-serif;
+    font-size: 12px;
+    line-height: 15px;
+    text-decoration-line: underline;
     color: #E4E5EA;
   }
 
